--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/public/index.html
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/public/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <div id="app"></div>
-  <script src="./public/index.js"></script>
+  <script src="./main.js"></script>
 </body>
+
+
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 </html>
