ionic does not work with current package managers

--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/src/index.html
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/src/index.html
@@ -8,11 +8,11 @@
   <title>Chromely Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+</head>
 
 <body>
   <div id="app"></div>
-  <script src="/src.e31bb0bc.js" type="text/javascript"></script>
+  <script src="./index.js" type="text/javascript" ></script>
 </body>
 
 </html>
