#6jb4c5 parcel & react was working.  the get document by id needs id!  doh

--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/src/index.html
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/src/index.html
@@ -1,6 +1,4 @@
-﻿<!-- parcel file -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,8 +9,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="./index.js" type="text/javascript" ></script>
+  <div id="app" class="app">
+    <script src="./index.tsx" ></script>
+  </div>
 </body>
 
 </html>
