--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/public/index.html
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/public/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="./index.js" ></script>
+  <div id="app" class="app">
+    <script src="./index.tsx" ></script>
+  </div>
 </body>
 
 </html>
