tried to make a asp server

--- a/TestProjects/ChromelyStart/ChromelyReact/reactapp/src/indexAsp.html
+++ b/TestProjects/ChromelyStart/ChromelyReact/reactapp/src/indexAsp.html
@@ -12,7 +12,7 @@
   <div id="app" class="app">
     <script>
       window.__CONFIG__ = {
-        chromely: true
+        chromely: false
       }
     </script>
     <script src="./index.tsx" ></script>
