#44 side bar on left side

--- a/NotionSidecar/src/pages/Sidebar/sidebar.html
+++ b/NotionSidecar/src/pages/Sidebar/sidebar.html
@@ -5,7 +5,7 @@
       <title>Sidebar</title>
    </head>
 
-   <body>
+   <body style="margin: 0px;">
       <div id="app-container"></div>
    </body>
 </html>
