--- a/EvergreenNotes/src/pages/Sidebar/sidebar.html
+++ b/EvergreenNotes/src/pages/Sidebar/sidebar.html
@@ -5,7 +5,7 @@
       <title>Sidebar</title>
    </head>
 
-   <body style="margin: 1px;">
-      <div id="app-container"></div>
+   <body>
+      <div id="app-container" style="overflow: hidden"></div>
    </body>
 </html>
