#81 fixed the iframe/app/system margins for thie sidebar.  rounded accordion borders

--- a/EvergreenNotes/src/pages/Sidebar/sidebar.html
+++ b/EvergreenNotes/src/pages/Sidebar/sidebar.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow: hidden">
    <head>
       <meta charset="UTF-8" />
       <title>Sidebar</title>
    </head>
 
-   <body>
+   <body style="margin: 0px; padding: 0px">
       <div id="app-container" style="overflow: hidden"></div>
    </body>
 </html>
