--- a/EvergreenNotes/src/pages/Sidebar/sidebar.html
+++ b/EvergreenNotes/src/pages/Sidebar/sidebar.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow: hidden">
    <head>
+      <style>
+         /* width */
+         ::-webkit-scrollbar {
+            width: 6px;
+            margin-right: 1px;
+         }
+
+         /* Track */
+         ::-webkit-scrollbar-track {
+            background: #f5f5f5;
+         }
+
+         /* Handle */
+         ::-webkit-scrollbar-thumb {
+            background: #9e9e9e;
+         }
+
+         /* Handle on hover */
+         ::-webkit-scrollbar-thumb:hover {
+            background: #616161;
+         }
+      </style>
       <meta charset="UTF-8" />
       <title>Sidebar</title>
    </head>
