--- a/EvergreenNotes/src/pages/Sidebar/sidebar.html
+++ b/EvergreenNotes/src/pages/Sidebar/sidebar.html
@@ -10,17 +10,17 @@
 
          /* Track */
          ::-webkit-scrollbar-track {
-            background: #f5f5f5;
+            background: #eae9e7;
          }
 
          /* Handle */
          ::-webkit-scrollbar-thumb {
-            background: #9e9e9e;
+            background: #5d6569;
          }
 
          /* Handle on hover */
          ::-webkit-scrollbar-thumb:hover {
-            background: #616161;
+            background: #272727;
          }
       </style>
       <meta charset="UTF-8" />
